--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -15,6 +15,44 @@
     <script>
         var app = angular.module("CampusMediusApp", ['leaflet-directive', 'ngRoute', 'rzModule']);
 
+        app.service('ActorService', function($http){
+            var actors = [];
+            var service = {
+                all: function() {
+                    return $http({method: 'GET', url: 'http://localhost:3000/actors'})
+                        .success(function(data, status, headers, config) { 
+                            actors = data;
+                         });
+                },
+                get: function(id) {
+                    for(var i=0; i<actors.length; i++) {
+                        if(actors[i].id == id) {
+                            return actors[i];
+                            break;
+                        }
+                    }
+                    return false;
+                },
+                search: function(params) {
+                    return _markers = actors.filter(function(el) {
+                        isMatch = true;
+                        if(params.hasOwnProperty('historical')) {
+                            if(el.historical !== params.historical) {
+                                return false;
+                            }
+                        }
+                        // given 2 time ranges S1-->E1 and S2-->E2
+                        // determine if 2 ranges overlap. S1 <= E2 && S2 <= E1
+                        if(el.start <= params.end && params.start <= el.end) {
+                            return el;
+                        }
+                    });
+                }
+            }
+
+            return service;
+        });
+
         // The app essentially has a single route, but we are handling the actorId param
         // as optional so we dont have to deal w reloading the page or losing our map view
         // when we go to actor view.
@@ -30,7 +68,7 @@
             });
         });
 
-        app.controller("MapController", [ '$scope', '$http', '$compile', '$location', '$routeParams', function($scope, $http, $compile, $location, $routeParams) {
+        app.controller("MapController", [ '$scope', '$http', '$compile', '$location', '$routeParams', 'ActorService', function($scope, $http, $compile, $location, $routeParams, ActorService) {
 
             $scope.actors = new Array();    // holds all our actors so we dont have to fetch them from API again
             $scope.actor = false;           // either false or an actor object; if actor object, then show actor template
@@ -79,6 +117,33 @@
                 }
             });
 
+            // returns an array of arrays
+            // each lane contains objects in consecutive time chunks
+            $scope.makeLanes = function(data) {
+                var _lanes = [];
+                for(var i=0; i<data.length; i++) {
+                    var _actor = data[i];
+                    if(i === 0) {
+                        _lanes.push([_actor]);
+                    } else {
+                        var laneLength = _lanes.length;
+                        var inLane = false;
+                         for(var j=0; j<laneLength; j++){
+                             if(_actor.start > _lanes[j][_lanes[j].length-1].end) {
+                                _lanes[j].push(_actor);
+                                inLane = true;
+                                break;
+                            }
+                         }
+                         // item didnt fit in any of the existing lanes so make a new one
+                         if(!inLane) {
+                            _lanes.push([_actor]);
+                         }
+                    }
+                }
+                $scope.lanes = _lanes;
+            };
+
             $scope.filterActors = function() {
                 var params = {};
                 if($scope.historicalFilter && $scope.historicalFilter !== 'All') {
@@ -87,19 +152,7 @@
                 params.start = $scope.timelineSlider.min;
                 params.end = $scope.timelineSlider.max;
 
-                var _markers = $scope.actors.filter(function(el) {
-                    isMatch = true;
-                    if(params.hasOwnProperty('historical')) {
-                        if(el.historical !== params.historical) {
-                            return false;
-                        }
-                    }
-                    // given 2 time ranges S1-->E1 and S2-->E2
-                    // determine if 2 ranges overlap. S1 <= E2 && S2 <= E1
-                    if(el.start <= params.end && params.start <= el.end) {
-                        return el;
-                    }
-                });
+                var _markers = ActorService.search(params);
                 
                 // updates our map markers
                 angular.extend($scope, {
@@ -133,12 +186,7 @@
                     $scope.timelineSlider.max = $routeParams.end;
                 }
                 if($routeParams.hasOwnProperty('actorId')) {
-                    for(var i=0; i<$scope.actors.length; i ++) {
-                        if($scope.actors[i].id == $routeParams.actorId) {
-                            $scope.actor = $scope.actors[i];
-                            break;
-                        }
-                    }
+                    $scope.actor = ActorService.get($routeParams.actorId);
                 } else {
                     $scope.actor = false;
                 }
@@ -158,48 +206,22 @@
                 $location.path('/actors');
             };
 
-            // returns an array of arrays
-            // each lane contains objects in consecutive time chunks
-            $scope.makeLanes = function(data) {
-                var _lanes = [];
-                for(var i=0; i<data.length; i++) {
-                    var _actor = data[i];
-                    if(i === 0) {
-                        _lanes.push([_actor]);
-                    } else {
-                        var laneLength = _lanes.length;
-                        var inLane = false;
-                         for(var j=0; j<laneLength; j++){
-                             if(_actor.start > _lanes[j][_lanes[j].length-1].end) {
-                                _lanes[j].push(_actor);
-                                inLane = true;
-                                break;
-                            }
-                         }
-                         // item didnt fit in any of the existing lanes so make a new one
-                         if(!inLane) {
-                            _lanes.push([_actor]);
-                         }
-                    }
-                }
-                $scope.lanes = _lanes;
-            };
-
             // low-fi way of getting actors from our API
             $scope.getActors = function() {
-                $http({method: 'GET', url: 'http://localhost:3000/actors'}).
-                    success(function(data, status, headers, config) {
-                      
-                      $scope.actors = data;
-                      angular.forEach(data, function(val, key) {
+                var actors = ActorService.all()
+                .success(function(data, status, headers, config) {
+                    // add bubble text
+                    angular.forEach(data, function(val, key) {
                         val.message = '<p>' + val.title + "-" + val.body + " <a ng-click='showActor(" + val.id + ")'>click for more</a></p>";
-                      });
-                      $scope.makeLanes($scope.actors);
-                      $scope.applyRouteParams();
-                    }).
-                    error(function(data, status, headers, config) {
-                        console.log('error', data, status, headers, config);
                     });
+
+                    $scope.actors = data;
+                    $scope.makeLanes($scope.actors);
+                    $scope.applyRouteParams();
+                }).
+                error(function(data, status, headers, config) {
+                    console.log('error', data, status, headers, config);
+                });
             }
 
             // since we are using directives inside our popups, we have to compile them
