fix sources w new encodings

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -398,9 +398,9 @@
                 responsive: false,
                 stretch: $scope.stretchModes[1],
                 sources: [
-                    {src: $sce.trustAsResourceUrl("https://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.mp4.mp4"), type: "video/mp4"},
-                    {src: $sce.trustAsResourceUrl("http://www.videogular.com/assets/videos/videogular.webm"), type: "video/webm"},
-                    {src: $sce.trustAsResourceUrl("http://www.videogular.com/assets/videos/videogular.ogg"), type: "video/ogg"}
+                    {src: $sce.trustAsResourceUrl("http://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.mp4.mp4"), type: "video/mp4"},
+                    {src: $sce.trustAsResourceUrl("http://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.webmhd.webm"), type: "video/webm"},
+                    {src: $sce.trustAsResourceUrl("http://campusmedius.s3.amazonaws.com/assets/fox-newsreel_schoenbrunn-rally.oggtheora.ogv"), type: "video/ogg"}
                 ],
                 transclude: true,
                 theme: {
