use new map layer of custom vienna map

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -179,6 +179,30 @@
                 lng: 16.37382,
                 zoom: 8
             }
+            $scope.layers= {
+                baselayers: {
+                    vienna: {
+                        name: 'Vienna 1933',
+                        url: 'http://a.tiles.mapbox.com/v3/campusmedius.campusmedius/{z}/{x}/{y}.png',
+                        type: 'xyz'
+                    },
+                    osm: {
+                        name: 'OpenStreetMap',
+                        url: 'http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',
+                        type: 'xyz'
+                    },
+                    cloudmade2: {
+                        name: 'Cloudmade Tourist',
+                        type: 'xyz',
+                        url: 'http://{s}.tile.cloudmade.com/{key}/{styleId}/256/{z}/{x}/{y}.png',
+                        layerParams: {
+                            key: '007b9471b4c74da4a6ec7ff43552b16f',
+                            styleId: 7
+                        }
+                    }
+                }
+            };
+
             // TODO: also hard coded; should come from service
             $scope.historical = ['All', 'Sovereign', 'Disciplinary', 'Control'];
 
