break video stuff out into separate controller

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -57,6 +57,7 @@
         <script src="scripts/directives/scrollSpy.js"></script>
         <script src="scripts/directives/spy.js"></script>
         <script src="scripts/services/ActorService.js"></script>
+        <script src="scripts/controllers/videoController.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/directives/com/2fdevs/videogular/videogular.js"></script>
