refactor to services and controllers

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -56,8 +56,10 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/directives/scrollSpy.js"></script>
         <script src="scripts/directives/spy.js"></script>
-        <script src="scripts/services/ActorService.js"></script>
-        <script src="scripts/controllers/videoController.js"></script>
+        <script src="scripts/services/actor.js"></script>
+        <script src="scripts/controllers/video.js"></script>
+        <script src="scripts/controllers/timeline.js"></script>
+        <script src="scripts/services/filter.js"></script>
         <!-- endbuild -->
 
         <script src="scripts/directives/com/2fdevs/videogular/videogular.js"></script>
