--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -32,14 +32,15 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header ng-controller="HeaderController">
-        <div class="container" id="mainHeader">
+    <header ng-controller="HeaderController" id="mainHeader">
+        <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <a href="/"><img src="images/logo.png" alt="" class="pull-left img-responsive"></a>
                     <ul class="nav nav-pills pull-right">
-                        <li ng-class="{ active: isActive('#/about')}"><a href="#/about">About</a></li>
-                        <li ng-class="{ active: isActive('#/topography')}"><a href="#/team" title="">Team</a></li>
+                        <li ng-class="{ active: isActive('#/') || isActive('#/actors')}"><a href="/">home</a></li>
+                        <li ng-class="{ active: isActive('#/about')}"><a href="#/about">about</a></li>
+                        <li ng-class="{ active: isActive('#/team')}"><a href="#/team" title="">team</a></li>
                     </ul>
                     
                 </div>
@@ -47,7 +48,15 @@
         </div>
     </header>
     <div ng-view ng-cloak></div>
-
+    <footer id="mainFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    &copy; 2014 All Rights Reserved
+                </div>
+            </div>
+        </div>
+    </footer>
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
