make map resize dynamically instead of hardcoding to max width/height; add colors

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -90,6 +90,7 @@
     <script src="scripts/controllers/topography.js"></script>
     <script src="scripts/directives/scrollSpy.js"></script>
     <script src="scripts/directives/spy.js"></script>
+    <script src="scripts/directives/resize.js"></script>
     <script src="scripts/modules/angularSlideables.js"></script>
     <script src="scripts/services/actor.js"></script>
     <script src="scripts/controllers/video.js"></script>
