add moment lib for better date handling in views and implement that ish

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -78,6 +78,8 @@
     <script src="bower_components/videogular-buffering/buffering.js"></script>
     <script src="bower_components/videogular-overlay-play/overlay-play.js"></script>
     <script src="bower_components/videogular-poster/poster.js"></script>
+    <script src="bower_components/moment/moment.js"></script>
+    <script src="bower_components/angular-moment/angular-moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
