refactor actor out into its own controller

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -90,6 +90,7 @@
     <script src="scripts/controllers/header.js"></script>
     <script src="scripts/controllers/about.js"></script>
     <script src="scripts/controllers/topography.js"></script>
+    <script src="scripts/controllers/actor.js"></script>
     <script src="scripts/directives/scrollSpy.js"></script>
     <script src="scripts/directives/spy.js"></script>
     <script src="scripts/directives/resize.js"></script>
