various fixes. will note in issues

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -34,14 +34,13 @@
     <![endif]-->
 
     <header ng-controller="HeaderController" id="mainHeader">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <a href="/"><img src="/images/logo.png" alt="" class="pull-left img-responsive"></a>
                     <ul class="nav nav-pills pull-right">
-                        <li ng-class="{ active: isActive('#/') || isActive('#/actors')}"><a href="/">home</a></li>
-                        <li ng-class="{ active: isActive('#/about')}"><a href="#/about">about</a></li>
-                        <li ng-class="{ active: isActive('#/team')}"><a href="#/team" title="">team</a></li>
+                        <li ng-class="{ active: isActive('/about')}"><a href="/about">about</a></li>
+                        <li ng-class="{ active: isActive('/team')}"><a href="/team" title="">team</a></li>
                     </ul>
                     
                 </div>
@@ -95,6 +94,7 @@
     <script src="/scripts/services/filter.js"></script>
     <script src="/scripts/directives/angular-leaflet-directive.min.js"></script>
     <script src="/scripts/directives/rzslider.min.js"></script>
+    <script src="scripts/controllers/team.js"></script>
     <!-- endbuild -->
 
 </body>
