--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -28,7 +28,7 @@
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
   </head>
-  <body ng-app="CampusMediusApp">
+  <body ng-app="CampusMediusApp" ng-cloak>
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -97,6 +97,7 @@
     <script src="/scripts/directives/angular-leaflet-directive.min.js"></script>
     <script src="/scripts/directives/rzslider.min.js"></script>
     <script src="/scripts/controllers/team.js"></script>
+    <script src="scripts/directives/cm-popup.js"></script>
     <!-- endbuild -->
 
 </body>
