latest build put hash back in

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -39,8 +39,8 @@
                 <div class="col-md-12">
                     <a href="/"><img src="/images/logo.png" alt="" class="pull-left img-responsive"></a>
                     <ul class="nav nav-pills pull-right">
-                        <li ng-class="{ active: isActive('/about')}"><a href="/about">about</a></li>
-                        <li ng-class="{ active: isActive('/team')}"><a href="/team" title="">team</a></li>
+                        <li ng-class="{ active: isActive('#/about')}"><a href="#/about">about</a></li>
+                        <li ng-class="{ active: isActive('#/team')}"><a href="#/team" title="">team</a></li>
                     </ul>
                     
                 </div>
