fix icons not showing up

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -22,6 +22,7 @@
     <!-- build:css({.tmp,app}) styles/styles.css -->
     <link rel="stylesheet" href="styles/rzslider.css">
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/fonts.css">
     <!-- endbuild -->
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web:400,600&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     
