--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -59,7 +59,7 @@
     <script src="/bower_components/jquery/jquery.js"></script>
     <script src="/bower_components/es5-shim/es5-shim.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/json3/lib/json3.min.js"></script>
+    <script src="/bower_components/json3/lib/json3.js"></script>
     <script src="/bower_components/sass-bootstrap/dist/js/bootstrap.js"></script>
     <script src="/bower_components/angular-resource/angular-resource.js"></script>
     <script src="/bower_components/angular-cookies/angular-cookies.js"></script>
