--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -99,6 +99,7 @@
     <script src="/scripts/directives/rzslider.min.js"></script>
     <script src="/scripts/controllers/team.js"></script>
     <script src="/scripts/directives/cm-popup.js"></script>
+    <script src="/scripts/services/page.js"></script>
     <!-- endbuild -->
 
 </body>
