--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -100,7 +100,8 @@
     <script src="/scripts/controllers/team.js"></script>
     <script src="/scripts/directives/cm-popup.js"></script>
     <script src="/scripts/services/page.js"></script>
-    <script src="scripts/services/team.js"></script>
+    <script src="/scripts/services/team.js"></script>
+    <script src="/scripts/directives/mediaObject.js"></script>
     <!-- endbuild -->
 
 </body>
