close #38 special fonts yo

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -27,6 +27,8 @@
     
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
+    <script type="text/javascript" src="//use.typekit.net/dny7xrm.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body ng-app="CampusMediusApp" ng-cloak>
     <!--[if lt IE 7]>
