--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css styles/vendor.css -->
+    <!-- build:css /styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="/bower_components/sass-bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
@@ -18,7 +18,7 @@
     <!-- endbower -->
     <!-- endbuild -->
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.css" />
-    <!-- build:css({.tmp,app}) styles/styles.css -->
+    <!-- build:css({.tmp,app}) /styles/styles.css -->
     <link rel="stylesheet" href="/styles/rzslider.css">
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/fonts.css">
@@ -55,7 +55,7 @@
     <script src="/bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
 
-    <!-- build:js scripts/vendor.js -->
+    <!-- build:js /scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/bower_components/jquery/jquery.js"></script>
     <script src="/bower_components/es5-shim/es5-shim.js"></script>
@@ -76,7 +76,7 @@
     <!-- endbuild -->
 
     
-    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <!-- build:js({.tmp,app}) /scripts/scripts.js -->
     <script src="/scripts/app.js"></script>
     <script src="/scripts/controllers/main.js"></script>
     <script src="/scripts/controllers/header.js"></script>
