--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -6,8 +6,11 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
+    <title>Campus Medius</title>
+    <meta name="description" content="Campus Medius is a mapping project that explores mediality as an experiential field by focusing on twenty-four hours in a metropolis. Our exemplary time-space is the weekend of May 13 and 14, 1933 in Vienna. The project's first stage consists of an interactive map representing the historical chronotope using multimedia sources. In the second phase, the historical a priori of these actual
+media experiences will be studied: the forms of knowledge, relations of power, and modes of subjectivation pervading the events in Vienna
+on May 13 and 14, 1933. The production of this website was sponsored by the Austrian Science Fund (FWF): J3181-G20, and the City of Vienna
+(MA 7: 573323/14). All content is licensed under Creative Commons 3.0. The project is authored by Simon Ganahl, Rory Solomon, Mallory Brennan, and Darius Daftary.">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css /styles/vendor.css -->
