attempting to add some non-javascript content

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -35,7 +35,6 @@ on May 13 and 14, 1933. The production of this website was sponsored by the Aust
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-
     <header ng-controller="HeaderController" id="mainHeader">
         <div class="container-fluid">
             <div class="row">
@@ -55,6 +54,21 @@ on May 13 and 14, 1933. The production of this website was sponsored by the Aust
     <script src="/bower_components/es5-shim/es5-shim.js"></script>
     <script src="/bower_components/json3/lib/json3.min.js"></script>
     <![endif]-->
+
+    <div class="no-js">
+      <p>
+	Campus Medius is a mapping project that explores mediality as
+	an experiential field by focusing on a chronotope of
+	twenty-four hours in Vienna, during the weekend of May 13 and
+	14, 1933.
+      </p>
+      <p>
+	Campus Medius requires Javascript to
+	function. Please <a href="http://www.enable-javascript.com/">enable
+	Javascript in your browser</a>.
+      </p>
+      <img src="/images/screenshot.png" alt="Campus Medius website screenshot"/>
+    </div>
 
     <!-- build:js /scripts/vendor.js -->
     <!-- bower:js -->
