--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -27,6 +27,11 @@ on May 13 and 14, 1933. The production of this website was sponsored by the Aust
     <link rel="stylesheet" href="/styles/fonts.css">
     <!-- endbuild -->
 
+    <meta property="og:title" content="Campus Medius" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://campusmedius.net/" />
+    <meta property="og:image" content="http://campusmedius.net/images/screenshot.png" />
+
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <script type="text/javascript" src="//use.typekit.net/dny7xrm.js"></script>
     <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
