--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -9,6 +9,22 @@
     <title>Campus Medius</title>
     <meta name="description" content="Campus Medius is a mapping project that explores mediality as an experiential field by focusing on twenty-four hours in a metropolis. Our exemplary time-space is the weekend of May 13 and 14, 1933 in Vienna. The project's first stage consists of an interactive map representing the historical chronotope using multimedia sources. In the second phase, the historical a priori of these actual media experiences will be studied: the forms of knowledge, relations of power, and modes of subjectivation pervading the events in Vienna
 on May 13 and 14, 1933. The production of this website was sponsored by the Austrian Science Fund (FWF): J3181-G20, and the City of Vienna (MA 7: 573323/14). All content is licensed under Creative Commons 3.0. The project is authored by Simon Ganahl, Rory Solomon, Mallory Brennan, and Darius Daftary.">
+
+    <!-- facebook / open graph -->
+    <meta property="og:title" content="Campus Medius" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://campusmedius.net/" />
+    <meta property="og:image" content="http://campusmedius.net/images/screenshot.png" />
+    <meta property="og:description" content="Campus Medius is a mapping project that explores mediality as an experiential field by focusing on twenty-four hours in a metropolis. Our exemplary time-space is the weekend of May 13 and 14, 1933 in Vienna. The project's first stage consists of an interactive map representing the historical chronotope using multimedia sources. In the second phase, the historical a priori of these actual media experiences will be studied: the forms of knowledge, relations of power, and modes of subjectivation pervading the events in Vienna on May 13 and 14, 1933. The production of this website was sponsored by the Austrian Science Fund (FWF): J3181-G20, and the City of Vienna (MA 7: 573323/14). All content is licensed under Creative Commons 3.0. The project is authored by Simon Ganahl, Rory Solomon, Mallory Brennan, and Darius Daftary." />
+
+    <!-- twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Campus Medius">
+    <meta name="twitter:site" content="@campusmedius">
+    <meta name="twitter:description" content="A mapping project that explores mediality as an experiential field by focusing on twenty-four hours in a metropolis. Our exemplary time-space is the weekend of May 13 and 14, 1933 in Vienna. ">
+    <meta name="twitter:image:src" content="http://campusmedius.net/images/screenshot.png">
+    <meta name="twitter:domain" content="http://campusmedius.net">
+
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css /styles/vendor.css -->
@@ -24,13 +40,6 @@ on May 13 and 14, 1933. The production of this website was sponsored by the Aust
     <link rel="stylesheet" href="/styles/styles.css">
     <link rel="stylesheet" href="/styles/fonts.css">
     <!-- endbuild -->
-
-    <meta property="og:title" content="Campus Medius" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="http://campusmedius.net/" />
-    <meta property="og:image" content="http://campusmedius.net/images/screenshot.png" />
-    <meta property="og:description" content="Campus Medius is a mapping project that explores mediality as an experiential field by focusing on twenty-four hours in a metropolis. Our exemplary time-space is the weekend of May 13 and 14, 1933 in Vienna. The project's first stage consists of an interactive map representing the historical chronotope using multimedia sources. In the second phase, the historical a priori of these actual media experiences will be studied: the forms of knowledge, relations of power, and modes of subjectivation pervading the events in Vienna on May 13 and 14, 1933. The production of this website was sponsored by the Austrian Science Fund (FWF): J3181-G20, and the City of Vienna
-(MA 7: 573323/14). All content is licensed under Creative Commons 3.0. The project is authored by Simon Ganahl, Rory Solomon, Mallory Brennan, and Darius Daftary." />
 
     <script src="http://cdn.leafletjs.com/leaflet-0.7.2/leaflet.js"></script>
     <script type="text/javascript" src="//use.typekit.net/dny7xrm.js"></script>
